# install-opencv

./: CMakeLists.txt  README.md  install_opencv_on_linux.sh  install_opencv_on_windows.bat  main.cpp  vcpkg.json
.github/workflows/: install_opencv_on_macos.sh  install_opencv_on_windows.bat  main.yml  vcpkg.json  windows.yml
